--- a/sites/all/themes/wander/src/sass/partials/_layout.scss
+++ b/sites/all/themes/wander/src/sass/partials/_layout.scss
@@ -33,7 +33,7 @@ html {
 }
 
 .container {
-  margin: 100px auto 150px;
+  margin: 100px auto 50px;
   max-width: 940px;
   overflow: hidden;
 }
